tests/reference/asr-test_import_02-55b47fa.stderr
warning: The module 'test_import_2' located in tests/errors/test_import/test_import_2.py cannot be loaded
 --> tests/errors/test_import_02.py:1:1
  |
1 | from test_import.test_import_2 import X
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ imported here

semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/test_import/test_import_2.py:3:1
  |
3 | X: Const[i32] = 1.23
  | ^               ^^^^ type mismatch ('i32' and 'f64')
